--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_package_gaw_ui
 description: A UI Package for the Get-a-Wash application stack.
 
-version: 1.0.0+1
+version: 1.1.0
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
