--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.0.7
   carousel_slider: ^4.2.1
   google_fonts: ^5.1.0
+  toggle_switch: ^2.1.0
 
 dev_dependencies:
   flutter_test:
