--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_package_gaw_ui
 description: A UI Package for the Get-a-Wash application stack.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.4.0
+version: 1.5.0
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -16,6 +16,7 @@ dependencies:
   carousel_slider: ^4.2.1
   google_fonts: ^5.1.0
   toggle_switch: ^2.1.0
+  syncfusion_flutter_datepicker: ^22.2.12
 
   # Get-a-Wash
 
