--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,10 @@ dependencies:
   carousel_slider: ^4.2.1
   google_fonts: ^5.1.0
   toggle_switch: ^2.1.0
-  syncfusion_flutter_datepicker: ^22.2.12
+  syncfusion_flutter_datepicker: ^23.1.36
+  syncfusion_flutter_charts: ^23.1.36
+  smooth_page_indicator: ^1.1.0
+  easy_localization: ^3.0.2
 
   # Get-a-Wash
 
