--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_package_gaw_ui
 description: A UI Package for the Get-a-Wash application stack.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.7.1
+version: 1.7.2
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -35,9 +35,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 
-dependency_overrides:
-  flutter_package_gaw_api:
-    path: ../flutter_package_gaw_api
+#dependency_overrides:
+#  flutter_package_gaw_api:
+#    path: ../flutter_package_gaw_api
 
 
 flutter:
