--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: flutter_package_gaw_ui
+name: gaw_ui
 description: A UI Package for the Get-a-Wash application stack.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.7.4
+version: 1.8.0
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
