--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: gaw_ui
 description: A UI Package for the Get-a-Wash application stack.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.8.0
+version: 1.8.1
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -21,6 +21,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   easy_localization: ^3.0.2
   carousel_indicator: ^1.0.6
+  fl_chart: ^0.66.0
 
 
 dev_dependencies:
