--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   easy_localization: ^3.0.2
   carousel_indicator: ^1.0.6
+  fl_chart: ^0.66.0
 
 
 dev_dependencies:
