--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   google_map_polyline_new: ^0.3.0+2
   lottie: ^3.0.0
+  multi_dropdown: ^2.1.3
 
 
 dev_dependencies:
