--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   widget_to_marker: ^1.0.4
   smooth_page_indicator: ^1.1.0
   carousel_indicator: ^1.0.6
-  fl_chart: 0.66.0
+  fl_chart: ^0.66.2
   image_picker: ^1.0.7
   dotted_border: ^2.1.0
   beamer: ^1.5.6
