--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  carousel_slider_plus: ^7.0.0
   cupertino_icons: ^1.0.2
-  carousel_slider: ^4.2.1
   toggle_switch: ^2.1.0
   syncfusion_flutter_datepicker: ^24.0.0
   syncfusion_flutter_charts: ^24.0.0
   widget_to_marker: ^1.0.4
   smooth_page_indicator: ^1.1.0
-  carousel_indicator: ^1.0.6
   fl_chart: ^0.66.2
   image_picker: ^1.0.7
   dotted_border: ^2.1.0
