--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   carousel_slider_plus: ^7.0.0
   cupertino_icons: ^1.0.2
   toggle_switch: ^2.1.0
@@ -20,20 +21,22 @@ dependencies:
   fl_chart: ^0.66.2
   image_picker: ^1.0.7
   dotted_border: ^2.1.0
-  beamer: ^1.5.6
   themed: ^5.0.0
   flutter_svg: ^2.0.9
   google_fonts: ^6.0.0
   easy_localization: ^3.0.2
-  flutter_riverpod: ^2.3.10
   freezed: ^2.4.1
   http: ^1.2.0
   tuple: ^2.0.2
   google_maps_flutter: ^2.5.0
-  google_map_polyline_new: ^0.3.0+2
   lottie: ^3.0.0
   multi_dropdown: ^2.1.3
 
+
+  lyte_studios_flutter_ui:
+    git:
+      url: https://github.com/LYTE-studios/lyte_studios_flutter_ui
+      ref: release/0.0.1
 
 dev_dependencies:
   flutter_test:
