--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
   lottie: ^3.0.0
   multi_dropdown: ^2.1.3
 
+  lyte_studios_flutter_ui:
+    git:
+      url: https://github.com/LYTE-studios/lyte_studios_flutter_ui
+      ref: main
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
